all green, but some tests disabled