@@ -32,73 +32,88 @@ public class ParseType extends CommonParse {
 
      */
     public ParameterizedType parse(Context context, List<Node> nodes, DetailedSources.Builder detailedSourcesBuilder) {
-        return parse(context, nodes, true, detailedSourcesBuilder);
+        return parse(context, nodes, true, null, detailedSourcesBuilder);
     }
 
     public ParameterizedType parse(Context context, List<Node> nodes, boolean complain,
+                                   Node varargs,
                                    DetailedSources.Builder detailedSourcesBuilder) {
-        ParameterizedType pt = parse2(context, nodes, complain, detailedSourcesBuilder);
+        ParameterizedType pt = parse2(context, nodes, complain, varargs, detailedSourcesBuilder);
         if (detailedSourcesBuilder != null) detailedSourcesBuilder.put(pt, source((Node) nodes));
         return pt;
     }
 
-    private ParameterizedType parse2(Context context, List<Node> nodes, boolean complain,
+    private ParameterizedType parse2(Context context, List<Node> nodes, boolean complain, Node varargs,
                                      DetailedSources.Builder detailedSourcesBuilder) {
         Token.TokenType tt;
         ParameterizedType pt;
-        Node n0 = nodes.isEmpty() ? (Node) nodes : nodes.getFirst();
-        if (n0 instanceof ReferenceType rt) {
-            return parse(context, rt, complain, detailedSourcesBuilder);
+        if (nodes instanceof ReturnType rt) {
+            return parse(context, rt.getFirst(), complain, varargs, detailedSourcesBuilder);
         }
-        if (nodes instanceof ObjectType ot) {
-            pt = parseObjectType(context, ot, complain, detailedSourcesBuilder);
-        } else if (n0 instanceof Name name) {
-            pt = parseObjectType(context, name, complain, detailedSourcesBuilder);
-        } else if (n0 instanceof Identifier identifier) {
-            List<? extends NamedType> nts = context.typeContext().getWithQualification(identifier.getSource(), complain);
-            assert nts.size() == 1;
-            NamedType nt = nts.getLast();
-            pt = nt.asSimpleParameterizedType();
-        } else if (n0 instanceof ObjectType ot) {
-            pt = parseObjectType(context, ot, complain, detailedSourcesBuilder);
-        } else if (n0 instanceof Operator o && Token.TokenType.HOOK.equals(o.getType())) {
-            // ?, ? super T ==
-            if (nodes.size() > 1 && nodes.get(1) instanceof WildcardBounds bounds) {
-                pt = parseWildcardBounds(context, bounds, detailedSourcesBuilder);
-            } else {
-                // simply ?
-                pt = runtime.parameterizedTypeWildcard();
-            }
-        } else {
-            if (n0 instanceof PrimitiveArrayType pat && pat.getFirst() instanceof PrimitiveType primitive
-                && primitive.getFirst() instanceof Primitive p) {
-                tt = p.getType();
-                int arrays = countArrays(pat);
-                ParameterizedType parameterizedType = primitiveType(tt);
-                assert parameterizedType != null;
-                ParameterizedType withArrays = parameterizedType.copyWithArrays(arrays);
-                if (detailedSourcesBuilder != null) {
-                    detailedSourcesBuilder.putAssociatedObject(withArrays, parameterizedType);
-                    detailedSourcesBuilder.put(parameterizedType, source(n0));
-                }
-                return withArrays;
-            }
-            if (n0 instanceof PrimitiveType primitive && primitive.getFirst() instanceof Primitive p) {
-                tt = p.getType();
-            } else if (n0 instanceof Primitive p) {
-                tt = p.getType();
-            } else if (n0 instanceof KeyWord keyWord) {
-                if (!keyWord.hasChildNodes() || nodes.size() == 1
-                    || nodes.size() == 3 && nodes.get(2).getType() == Token.TokenType.CLASS) {
-                    tt = keyWord.getType();
-                } else {
-                    throw new UnsupportedOperationException();
-                }
-            } else tt = null;
-            if (tt != null) {
+        int arrays = countArrays(nodes) + (varargs != null ? 1 : 0);
+        Source source;
+        switch (nodes) {
+            case PrimitiveArrayType pat -> {
+                PrimitiveType primitiveType = pat.firstChildOfType(PrimitiveType.class);
+                Primitive primitive = primitiveType.firstChildOfType(Primitive.class);
+                tt = primitive.getType();
+                source = source(primitive);
                 pt = primitiveType(tt);
-            } else {
-                pt = null;
+            }
+            case ReferenceType rt -> {
+                if (rt.getFirst() instanceof ObjectType ot) {
+                    pt = parseObjectType(context, ot, complain, detailedSourcesBuilder);
+                    source = source(ot);
+                } else throw new UnsupportedOperationException();
+            }
+            case ObjectType ot -> {
+                pt = parseObjectType(context, ot, complain, detailedSourcesBuilder);
+                source = source(ot);
+            }
+            default -> {
+                Node n0 = nodes.isEmpty() || nodes instanceof Node.TerminalNode ? (Node) nodes : nodes.getFirst();
+                source = source(n0);
+                if (n0 instanceof Name name) {
+                    pt = parseObjectType(context, name, complain, detailedSourcesBuilder);
+                } else if (n0 instanceof Identifier identifier) {
+                    List<? extends NamedType> nts = context.typeContext().getWithQualification(identifier.getSource(), complain);
+                    assert nts.size() == 1;
+                    NamedType nt = nts.getLast();
+                    pt = nt.asSimpleParameterizedType();
+                    if (detailedSourcesBuilder != null) detailedSourcesBuilder.put(pt, source(n0));
+                } else if (n0 instanceof ObjectType ot) {
+                    pt = parseObjectType(context, ot, complain, detailedSourcesBuilder);
+                } else if (n0 instanceof Operator o && Token.TokenType.HOOK.equals(o.getType())) {
+                    // ?, ? super T ==
+                    if (nodes.size() > 1 && nodes.get(1) instanceof WildcardBounds bounds) {
+                        pt = parseWildcardBounds(context, bounds, detailedSourcesBuilder);
+                    } else {
+                        // simply ?
+                        pt = runtime.parameterizedTypeWildcard();
+                        if (detailedSourcesBuilder != null) detailedSourcesBuilder.put(pt, source(n0));
+                    }
+                } else {
+                    if (n0 instanceof PrimitiveType primitive && primitive.getFirst() instanceof Primitive p) {
+                        tt = p.getType();
+                    } else if (n0 instanceof Primitive p) {
+                        tt = p.getType();
+                    } else if (n0 instanceof KeyWord keyWord) {
+                        if (!keyWord.hasChildNodes() || nodes.size() == 1
+                            || nodes.size() == 3 && nodes.get(2).getType() == Token.TokenType.CLASS) {
+                            tt = keyWord.getType();
+                        } else {
+                            throw new UnsupportedOperationException();
+                        }
+                    } else tt = null;
+                    if (tt != null) {
+                        pt = primitiveType(tt);
+                    } else {
+                        pt = null;
+                    }
+                    if (pt != null && detailedSourcesBuilder != null) {
+                        detailedSourcesBuilder.put(pt, source(n0));
+                    }
+                }
             }
         }
         if (pt == null) {
@@ -107,23 +122,22 @@ public class ParseType extends CommonParse {
             }
             return null;
         }
-
-        int arrays = countArrays(nodes);
         if (arrays == 0) {
             return pt;
         }
-
         ParameterizedType withArrays = pt.copyWithArrays(arrays);
         if (detailedSourcesBuilder != null) {
+            //  Source source1 = source((Node) nodes);
+            //  detailedSourcesBuilder.put(withArrays, source1);
             detailedSourcesBuilder.putAssociatedObject(withArrays, pt);
-            detailedSourcesBuilder.put(pt, source(n0));
+            detailedSourcesBuilder.put(pt, source);
         }
         return withArrays;
     }
 
     private ParameterizedType parseWildcardBounds(Context context, WildcardBounds bounds, DetailedSources.Builder detailedSourcesBuilder) {
         Wildcard wildcard;
-        Node node = bounds.get(0);
+        Node node = bounds.getFirst();
         Node.NodeType type = node.getType();
         if (Token.TokenType.EXTENDS.equals(type)) {
             wildcard = runtime.wildcardExtends();
@@ -155,7 +169,6 @@ public class ParseType extends CommonParse {
         int i = 0;
         StringBuilder sb = new StringBuilder();
         int startNamedType = -1;
-        int endNamedType = -1;
         Stack<Source> details = detailedSourcesBuilder == null ? null : new Stack<>();
         while (i < ot.size()) {
             if (ot.get(i) instanceof Annotation) {
@@ -164,7 +177,6 @@ public class ParseType extends CommonParse {
             } else {
                 if (ot.get(i) instanceof Identifier id) {
                     if (startNamedType == -1) startNamedType = i;
-                    endNamedType = i;
                     sb.append(id.getSource());
                     if (details != null) {
                         // source always starts at the beginning of the type, ends incrementally further
@@ -225,21 +237,25 @@ public class ParseType extends CommonParse {
         List<ParameterizedType> typeArguments = new ArrayList<>();
         int j = 1;
         while (j < tas.size()) {
-            if (tas.get(j) instanceof TypeArgument ta) {
-                ParameterizedType arg = parse(context, ta, complain, detailedSourcesBuilder);
-                typeArguments.add(arg);
-            } else if (tas.get(j) instanceof Operator o && Token.TokenType.HOOK.equals(o.getType())) {
-                typeArguments.add(runtime.parameterizedTypeWildcard());
-            } else if (tas.get(j) instanceof Type type) {
-                ParameterizedType arg = parse(context, type, complain, detailedSourcesBuilder);
-                if (arg == null) {
-                    if (complain) {
-                        throw new Summary.ParseException(context, "Expected to know type argument");
-                    }
-                    return null;
+            switch (tas.get(j)) {
+                case TypeArgument ta -> {
+                    ParameterizedType arg = parse(context, ta, complain, null, detailedSourcesBuilder);
+                    typeArguments.add(arg);
                 }
-                typeArguments.add(arg);
-            } else throw new UnsupportedOperationException();
+                case Operator o when Token.TokenType.HOOK.equals(o.getType()) ->
+                        typeArguments.add(runtime.parameterizedTypeWildcard());
+                case Type type -> {
+                    ParameterizedType arg = parse(context, type, complain, null, detailedSourcesBuilder);
+                    if (arg == null) {
+                        if (complain) {
+                            throw new Summary.ParseException(context, "Expected to know type argument");
+                        }
+                        return null;
+                    }
+                    typeArguments.add(arg);
+                }
+                case null, default -> throw new UnsupportedOperationException();
+            }
             j += 2;
         }
         return typeArguments;
@@ -247,10 +263,10 @@ public class ParseType extends CommonParse {
 
     private int countArrays(List<Node> nodes) {
         int arrays = 0;
-        int i = 1;
-        while (i < nodes.size() && nodes.get(i) instanceof Delimiter d && "[".equals(d.getSource())) {
-            i += 2;
-            arrays++;
+        for (Node child : nodes) {
+            if (child instanceof Delimiter d && "[".equals(d.getSource())) {
+                arrays++;
+            }
         }
         return arrays;
     }
